Add unit tests for FunctionDSL.
Signed-off-by: MaxKsyunz <maxk@bitquilltech.com>